--- a/ConvocatoriaSEDRAE2022.html
+++ b/ConvocatoriaSEDRAE2022.html
@@ -260,7 +260,7 @@ en Aguascalientes. Como cada año, se ha lanzado la Convocatoria de SEDRAE 2022 
 
 <div class="row">
   <div class="single_about_thumb mb-3 col-lg-6">
-      <video autoplay muted loop id="myVideo" style="max-width: 330px" alt="convocatoriaSEDRAE2022">
+      <video autoplay muted loop id="myVideo" style="max-width: 330px">
         <source src="videos/ConvocatoriaSEDRAE2022.mp4" type="video/mp4" >
       </video>
       <div class="form-button text-center text-lg-left" style="max-width: 330px">
