--- a/ConvocatoriaSEDRAE2022.html
+++ b/ConvocatoriaSEDRAE2022.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=O2PqG4lQbSER69XG8hT9UFPr7D8d55dyGFwJw1FL04L4KKmgb_qUG5DP2n9TN4mwH92iUvFEVZ1YUygmq9GLlTZeMfvq74HJLxop4pv1h-_K7UUB8WfEEcKWvA1Af-H6qOzDSV7lbBuBTs7AgUYCwW8RRcPJ2QfTiWTZsRB0js0eLHk-jLWm5ZaSEK8z73_S547RGMJrMfogVFiHLO80Rw" charset="UTF-8"></script><style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
 
     <!-- Google Tag Manager-->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
