--- a/ArrendamientoMax4Solar.html
+++ b/ArrendamientoMax4Solar.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=fezBfXnmzo7M_puvtjsNdwOf8IOhbYtWpRL61cuAr8XXIEnDZrF2pcPQQoUwJBtCdc_8pvCv2wzssKsohQjV2MIv33U546r3zuMOUmVrCDxk00gGGjAUxRrnh-8na_iZN7K9JErPFQtbArV5GHVp_XHQryOwIJfOu0FUlIxEdgN5RFTZsN7R_yggzNl0kudusZaclab0sJvgJl-LCk81XQ" charset="UTF-8"></script><style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
 
     <!-- Google Tag Manager-->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
