--- a/CalentadorSolar.html
+++ b/CalentadorSolar.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=e3cdCwzl--iBgvZvMFRzpS92ny_jLXccBNtB_fMLLYKRWPa1kDFRNBK423kwjeL491aeYiqawDQlAHj51kvS0q8_MnKRvgYFXpan2T89WPaUZiFm5ezr1FeTTGgnCP93JN1F1oT9JzeYh9LjLfqCXB6uK0ofrSOaPT60UcgLYQJR7GHbiTmZXUMccvV956tj" charset="UTF-8"></script><style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
 
     <!-- Google Tag Manager-->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
