--- a/ApoyoPanelesSolares2021.html
+++ b/ApoyoPanelesSolares2021.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=O2PqG4lQbSER69XG8hT9UJFjpA2tvaM4sz4J9MXea7kF1RpWHG1NXIMuXVPumyk7fseV0FEUwa62a8NmPZLrBeqGtIT6FMx5nsty_9iy3OwQoxmsjhlsKHalYWTbIxzdSJf_rCEe1xyzx7KLgTpWY0TRpOOCLHq8Cix2zGIZnvTf4V7r_dgoW6c3QWF_7MVjldSETAjBS1BrQZgcozbIaA" charset="UTF-8"></script><style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
 
     <!-- Google Tag Manager-->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
