--- a/MonitoreoyMantenimiento.html
+++ b/MonitoreoyMantenimiento.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=lWHTZ77kJwBSqLKn0OQPrU-DK-zmaRr-Fd-7Ne8Fjy5-VSRdcN92DHY7F7O_Vge4SJ1hwoTFESQpLH_pGhB3WA4XaiccD9P5Vk5AN4F3_u07eyI1Z7UBaJGI1GhwaChV8HH4x4U_UdzDetJzCF971o7lDKhNm-woY3CSlUbR-TMXJj37h_J0b18GEkUhLhO4P0zqET8rInX76X9mUExGig" charset="UTF-8"></script><style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
+    <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
 
     <!-- Google Tag Manager-->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
