Nuevo nombre SEDEC 2022

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -86,7 +86,7 @@
                        <ul class="rd-menu rd-navbar-dropdown">
                           <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="PanelesSolaresConBanverde.html">Banverde</a>
                           </li>
-                          <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="ApoyoPanelesSolares2021.html">Apoyos a fondo perdido para Negocios</a>
+                          <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="ConvocatoriaSEDEC2022.html">Apoyos a fondo perdido para Negocios</a>
                           </li>
                           <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="ConvocatoriaSEDRAE2022.html">Apoyos a fondo perdido para Agroindustria</a>
                           </li>
